--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_create_new_group">New Group</string>
     <string name="title_activity_add_participants">AddParticipantsActivity</string>
+    <string name="action_create_group">New Group</string>
 </resources>
