--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_create_new_group">New Group</string>
     <string name="title_activity_add_participants">AddParticipantsActivity</string>
     <string name="action_create_group">New Group</string>
+    <string name="action_next">Next</string>
 </resources>
