--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_add_participants">AddParticipantsActivity</string>
     <string name="action_create_group">New Group</string>
     <string name="action_next">Next</string>
+    <string name="title_activity_group_details">GroupDetails</string>
 </resources>
