--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="add_contacts">Add Contacts</string>
     <string name="title_activity_group_details">GroupDetails</string>
     <string name="title_activity_add_contact">AddContactActivity</string>
+    <string name="select_location">Select a Location</string>
+    <string name="ok">OK</string>
 </resources>
